--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "ramesh01.github.io/timer-web-app-react",
+  "homepage": "http://ramesh01.github.io/timer-web-app-react",
   "name": "timer-web-app",
   "version": "0.1.0",
   "private": true,
@@ -9,20 +9,22 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
     "classnames": "^2.3.1",
+    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.1",
     "react-countdown-circle-timer": "^3.0.9",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
+    
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
