Misc: Homepage path changes

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://ramesh01.github.io/timer-web-app-react",
+  "homepage": "https://ramesh01.github.io/timer-web-app-react",
   "name": "timer-web-app",
   "version": "0.1.0",
   "private": true,
